--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HangMan</string>
+    <string name="H1_name">H.1</string>
+    <string name="H2_name">H.2</string>
+    <string name="H3_name">H.3</string>
 </resources>
